fixes in home on mobile

--- a/src/routes/home/Home.scss
+++ b/src/routes/home/Home.scss
@@ -13,12 +13,13 @@
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
 
-  .home-icon {
+  .home-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
+    height: 15vh;
 
     .icon-user {
       grid-area: 1 / 1 / 2 / 2;
@@ -33,7 +34,7 @@
     .input-icon {
       grid-area: 1 / 1 / 2 / 4;
       width: 98%;
-      height: 8rem;
+      height: 3rem;
       display: flex;
       position: fixed;
       left: 50px;
@@ -41,7 +42,6 @@
 
       .input-text-post {
         width: 88%;
-        height: 35%;
         border: 1px solid gray;
         border-radius: 25px;
         padding: 5px;
@@ -87,10 +87,13 @@
   .post-container {
     display: grid;
     grid-template-columns: 0.2fr 1fr;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     padding: 0.5rem;
+    border: 1px solid gray;
+    margin-bottom: 1em;
+    height: 30vh;
 
     .icon-user {
       grid-area: 1 / 1 / 2 / 2;
@@ -104,18 +107,44 @@
     .post-user {
       grid-area: 1 / 2 / 2 / 3;
       padding: 0.5rem 0.3rem;
+
+      .name-user {
+        font-weight: bold;
+        text-transform: capitalize;
+      }
     }
     .post-content {
       grid-area: 2 / 1 / 3 / 3;
       padding: 0.5rem 0.3rem;
 
-      .categories-post{
+      .categories-post {
         text-transform: uppercase;
       }
 
-      .title-post{
+      .title-post {
         font-weight: bold;
         text-transform: capitalize;
+      }
+    }
+    .action-post {
+      grid-area: 3 / 1 / 4 / 3;
+      display: flex;
+      align-items: center;
+      justify-content: start;
+      height: 4vh;
+      gap: 1rem;
+
+      .interaction-post {
+        svg {
+          width: 1.5rem;
+          height: 1.5rem;
+        }
+      }
+      .more-post {
+        svg {
+          width: 1.5rem;
+          height: 1.5rem;
+        }
       }
     }
   }
@@ -124,9 +153,18 @@
 //MOBILE
 @media (max-width: $break-mobileLarge) {
   .write-post-icon {
-    width: auto;
+    border: 1px solid red;
+    width: 100vw;
     top: 0;
     left: 0;
     border-radius: 0;
+
+    .home-container {
+      height: 10vh;
+    }
+
+    .post-container{
+      height: 22vh;
+    }
   }
 }
